Fri Oct 29 09:26:52 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am: Put $(PCRE_LIBS) in libtransform_la_LIBADD rather than
	  omega_LDADD (more correct, but probably doesn't actually make any
	  difference).

Thu Oct 28 14:46:11 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Disable more output unless --verbose is specified.  Don't
	  flush the "Indexing" partial message until we get to the potentially
	  time consuming actions.

Thu Oct 28 13:54:44 GMT 2010  Olly Betts <olly@survex.com>

	* docs/overview.rst: Improve mark-up, and tweak wording in a few
	  places.

Thu Oct 28 13:46:36 GMT 2010  Olly Betts <olly@survex.com>

	* docs/overview.rst: Update docs for --duplicates and
	  --preserve-removed.

Thu Oct 28 13:27:01 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Deprecated "--preserve-nonduplicates" in favour of new
	  long option "--preserve-removed" which does the same thing, but has
	  a (hopefully) clearer name.  Rename the variable it controls from
	  preserve_unupdated to delete_removed_documents (with the opposite
	  sense).

Thu Oct 28 12:08:59 GMT 2010  Olly Betts <olly@survex.com>

	* configfile.cc: Only append '/' to directory values if they don't
	  already have a trailing '/'.

Thu Oct 28 11:49:54 GMT 2010  Olly Betts <olly@survex.com>

	* runfilter.cc: Make the memory limit for filter processes the size
	  of physical memory, not 7/8 of this value, which is a little less
	  arbitrary (ticket#424).

Thu Oct 28 11:47:38 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Under --duplicate=ignore, fix so that old documents which
	  aren't seen get deleted, which wasn't implemented before (to suppress
	  this deletion, pass -p as well).

Thu Oct 28 10:38:21 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Track how many documents in the index we haven't seen
	  in this index run - if this is 0, we don't need to check for docs
	  to delete at all; otherwise we can at least use it to know when we